chore: Move build-for-browser.js to scripts directory

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format:check": "prettier --check \"src/**/*.{js,json,css}\"",
     "build": "npm run lint && npm run test && npm run build:copy && npm run build:browser",
     "build:copy": "mkdir -p dist/icons && cp src/badge.js src/content.js src/scanner.js src/background.js src/badge.css src/options.html src/options.js dist/ && cp src/icons/*.png dist/icons/ && cp manifest.json dist/",
-    "build:browser": "node build-for-browser.js",
+    "build:browser": "node scripts/build-for-browser.js",
     "clean": "rm -rf dist",
     "prepare": "husky",
     "install:chrome": "echo 'Load unpacked extension from dist/ folder in Chrome'"
